# geometry-central

./: CLAUDE.md  INVESTIGATION_PLAN.md  MIGRATION.md  PORTAL_DISCREPANCY_INVESTIGATION.md
benchmark/: CMakeLists.txt  README.md  cold_cache_benchmark.cpp  debug_path.cpp  diagnose_facestrip.cpp  epsilon_test.cpp  epsilon_vs_flipout_test.cpp  fan_direction_test.cpp  full-benchmark-2026-03-30.md  geodesic_comparison.cpp  gfr_strategy_benchmark.cpp  initial_distance_test.cpp  multi_mesh_benchmark.cpp
docs/: GFR_PORT_PLAN.md  fan-direction-verification-plan.md
include/geometrycentral/surface/: funnel_geodesics.h  very_discrete_geodesic.h
src/: CMakeLists.txt
src/surface/: funnel_geodesics.cpp  very_discrete_geodesic.cpp
test/: CMakeLists.txt  bunny_flipout_pairs.txt  test_archive.ply  test_cloud.ply
test/include/: bunny_flipout_data.h  bunny_gfr_data.h
test/src/: funnel_geodesics_test.cpp  portal_discrepancy_test.cpp
